# ubdl-ana

./: .gitignore  README.md
dev_1e1p_selection/: .gitignore  GNUmakefile  NueSelection.cxx  NueSelection.h  calc_pot.py  hadd.sh  make_1e1p_sel_plots.cxx  make_finalstate_plots.cxx  plot_cutvars.py  plot_cutvars_beforecuts.py  plot_eff.py  plot_enu.py  plot_enu_finalstates.py  plot_nshower.py  run_batch_1e1p_plots.sh  submit_batch_plot_1e1p_bnb5e19.sh  submit_batch_plot_1e1p_bnbnu_run3.sh  submit_batch_plot_1e1p_intrinsic.sh  submit_batch_plot_finalstate_intrinsic.sh
dicharge_study/: .gitignore  GNUmakefile  README.md  charge_on_path.cxx  plot.py  run_batch_dicharge_study.sh  submit_batch_dicharge_study.sh
extract_passing_events/: .gitignore  GNUmakefile  extract_passing_events.cxx  gen_runlist.py  run_batch_dlgen2filter.sh  submit_batch_dlgen2filter_bnbnu_run3.sh
larmatch_1m1p_ana/: .gitignore  GNUmakefile  README.md  dedx_1m1p_ana.cxx  dedx_1m1p_ana_mc.cxx  plot_dedx.py  plot_llr.py  run_batch_dedxana.sh  run_batch_kps_reco.sh  submit_batch_dedxana.sh  submit_batch_kps_larmatch.sh  submit_batch_kps_reco.sh
larmatch_crttrack_ana/: README.md  run_batch_crttrack.sh  run_batch_kps_larmatch.sh  submit_batch_crttrack.sh  submit_batch_kps_larmatch.sh
larmatch_dedx_ana/: .gitignore  GNUmakefile  README.md  dedx_larmatch_from_true_showers.cxx  dedx_larmatch_from_true_tracks.cxx  plot_dedx.py  plot_shower_dedx.py  run_batch_dedxana.sh  run_batch_dedxana_showers.sh  run_batch_kps_larmatch.sh  submit_batch_dedxana.sh  (+2 more)
larmatch_me_kpreco/src/: CMakeLists.txt  ana_kpreco.cxx
(+99 files in other folders)
